--- a/css/styles.css
+++ b/css/styles.css
@@ -295,7 +295,471 @@ body {
 .join-row{
     margin: 0%;
     width: 100% !important;
-    padding: 5% 20% 5% 20% !important;
+    padding: 5% 10% 5% 10% !important;
     text-align: right;
     background-color: #E63946;
 }
+.join-block{
+    width: 40%;
+    border-radius: 50%;
+    overflow: hidden;
+}
+.join-block img{
+    width: 100% !important;
+    height: auto;
+}
+.left-block{
+    margin-left: auto;
+    margin-right: 0%;
+}
+.add-chall h2{
+    position: absolute;
+    top: 30%;
+    left: 8%;
+    background-color: #F1FAEE;
+    line-height: 60px;
+    width: 50%;
+    text-align: center;
+    border-radius: 36px;
+    color: #1D3557;
+    font-size: 22px;
+}
+.add-chall h2:hover{
+    border: 3px solid #1D3557;
+    color: #E63946;
+    content: 'Register your Company' !important;
+}
+.take-chall h2{
+    position: absolute;
+    top: 30%;
+    left: auto;
+    right: 8%;
+}
+.join-p{
+    width: 100%;
+    text-align: center;
+    color:  #F1FAEE;
+}
+/* cards */
+.cards{
+    width: 100%;
+    overflow: hidden;
+}
+.card-row{
+    height: 300px;
+    margin: 0%;
+    margin-top: 3%;
+}
+.square-flip{
+    -webkit-perspective: 1000;
+    -moz-perspective: 1000;
+    -ms-perspective: 1000;
+    perspective: 1000;
+
+    -webkit-transform: perspective(1000px);
+    -moz-transform: perspective(1000px);
+    -ms-transform: perspective(1000px);
+    transform: perspective(1000px);
+
+    -webkit-transform-style: preserve-3d; 
+    -moz-transform-style: preserve-3d; 
+    -ms-transform-style: preserve-3d; 
+    transform-style: preserve-3d; 
+
+    /*border:1px solid #efefef;*/
+    }
+    
+    .square,.square2{
+        width:80%;
+        height: 80%;
+        border-radius: 50%;
+    }
+    .square{
+
+        background-size: cover;
+        background-position:center center;
+
+        -ms-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+            transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+            -webkit-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+        overflow: hidden;
+
+        position:absolute;
+        top:0;
+
+
+        -webkit-backface-visibility: hidden; 
+        backface-visibility: hidden;
+    }
+    .square-flip .square{
+        -webkit-transform: rotateY(0deg);
+        -moz-transform: rotateY(0deg);
+        -o-transform: rotateY(0deg);
+        -ms-transform: rotateY(0deg);
+        transform: rotateY(0deg);
+        transform-style: preserve-3d;
+        z-index:1;
+    }
+    .square-flip:hover .square{
+        -webkit-transform: rotateY(-180deg);
+        -moz-transform: rotateY(-180deg);
+        -o-transform: rotateY(-180deg);
+        -ms-transform: rotateY(-180deg);
+        transform: rotateY(-180deg);
+        transform-style: preserve-3d;
+    }
+
+
+    .square2{
+
+        background-size: cover;
+        background-position:center center;
+
+        -ms-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+            transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+            -webkit-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+        overflow: hidden;
+
+        position:absolute;
+        top:0;
+
+        -webkit-backface-visibility: hidden; 
+        backface-visibility: hidden;
+    }
+    .square-flip .square2{
+        -webkit-transform: rotateY(180deg);
+        -moz-transform: rotateY(180deg);
+        -o-transform: rotateY(180deg);
+        -ms-transform: rotateY(180deg);
+        transform: rotateY(180deg);
+        transform-style: preserve-3d;
+        z-index:1;
+    }
+    .square-flip:hover .square2{
+        -webkit-transform: rotateY(0deg);
+        -moz-transform: rotateY(0deg);
+        -o-transform: rotateY(0deg);
+        -ms-transform: rotateY(0deg);
+        transform: rotateY(0deg);
+        transform-style: preserve-3d;
+    }
+
+    /*Square content*/
+    .square-container{
+        padding:40px;
+        text-align:center;
+        position:relative;
+        top:50%;
+
+        -ms-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+            transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+            -webkit-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+
+    
+        -webkit-transform: translateY(-50%) translateX(0px)  scale(1);
+        -ms-transform: translateY(-50%) translateX(0px)  scale(1);
+transform: translateY(-50%) translateX(0px)  scale(1);
+        transform-style: preserve-3d;
+        z-index:2;
+    }
+    .square-flip:hover .square-container{
+        
+        -webkit-transform: translateY(-50%) translateX(-650px)  scale(.88);
+        -ms-transform: translateY(-50%) translateX(-650px)  scale(.88);
+  transform: translateY(-50%) translateX(-650px)  scale(.88);
+        transform-style: preserve-3d;
+
+    }
+
+    .square-container2{
+        padding:40px;
+        text-align:center;
+        position:relative;
+        top:50%;
+
+        -ms-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+            transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+            -webkit-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
+
+        
+        -webkit-transform: translateY(-50%) translateX(650px) translateZ(60px) scale(.88);
+        -ms-transform: translateY(-50%) translateX(650px) translateZ(60px) scale(.88);
+  transform: translateY(-50%) translateX(650px) translateZ(60px) scale(.88);
+
+        transform-style: preserve-3d;
+        z-index:2;
+    }
+    .square-flip:hover .square-container2{
+        
+        -webkit-transform: translateY(-50%) translateX(0px) translateZ(0px) scale(1);
+        -ms-transform: translateY(-50%) translateX(0px) translateZ(0px) scale(1);
+        transform: translateY(-50%) translateX(0px) translateZ(0px) scale(1);
+  transform-style: preserve-3d;
+    }
+
+
+
+    /*Style text*/
+    .square-flip h2{
+        color:white;
+        font-family: "Open Sans";
+        font-weight:700;
+        font-size:22px;
+    }
+    .square-flip h3{
+        color:white;
+        font-family: "Open Sans";
+        font-weight:500;
+        font-size:16px;
+        line-height:26px;
+    }
+    /*Elements*/
+    .flip-overlay{
+        display:block;
+        background:rgba(0,0,0,0.5);
+        width:100%;
+        height:100%;
+        position:absolute;
+        top:0;
+        background-color: #1d3557c0;
+    }
+    .align-center{
+        margin:0 auto;
+    }
+    .kallyas-button{
+        display:block;
+        width:160px;
+        padding:18px 30px;
+        font-family:"Open Sans";
+        font-weight:600;
+        color:#fff;
+        background:#FF2024;
+        margin:0 auto;
+        border-radius:2px;
+        text-decoration:none;
+
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffa067+0,ff2959+49,ff2024+100 */
+        background: #ffa067; /* Old browsers */
+        background: -moz-linear-gradient(-45deg,  #ffa067 0%, #ff2959 49%, #ff2024 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(-45deg,  #ffa067 0%,#ff2959 49%,#ff2024 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(135deg,  #ffa067 0%,#ff2959 49%,#ff2024 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa067', endColorstr='#ff2024',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    }
+
+
+    /*ADD SHADOWS OPTIONAL*/
+    .square-flip .square .boxshadow, .square-flip .square .textshadow, .square-flip .square2 .boxshadow, .square-flip .square2 .textshadow{
+        -ms-transition: 0.60s;
+            transition: 0.60s;
+            -webkit-transition: 0.60s;
+    }
+
+    .square-flip .square .boxshadow{
+        -webkit-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+        -moz-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+        box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+    }
+    .square-flip .square .textshadow{
+        -webkit-text-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+        -moz-text-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+        text-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+    }
+    .square-flip:hover .square .boxshadow, .square-flip:hover .square .textshadow{
+        -webkit-box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
+        -moz-box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
+        box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
+    }
+
+
+    .square-flip .square2 .boxshadow{
+        -webkit-box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
+        -moz-box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
+        box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
+    }
+    .square-flip .square2 .textshadow{
+        -webkit-text-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
+        -moz-text-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
+        text-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
+    }
+    .square-flip:hover .square2 .boxshadow, .square-flip:hover .square2 .textshadow{
+        -webkit-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+        -moz-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+        box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+    }
+
+    
+    /*You can delete this style*/
+    
+.clearfix{clear:both;}
+.cards-p{
+    color: #E63946;
+    margin: 0% auto;
+    margin-top: 5%;
+}
+/* desk starts here */
+.f-desk {
+    margin: 0% 10%;
+    padding: 1%;
+    border: none;
+    background-color: #E63946;
+    color: #F1FAEE;
+    border-radius: 36px;
+}
+.f-pic{
+    position: relative;
+}
+.img-res{
+    width: 50% !important;
+    margin: auto !important;
+    text-align: center !important;
+    border-radius: 50%;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+}
+.para-res{
+    width: 50%;
+    text-align: left;
+    position: absolute;
+    top: 0% !important;
+    right: 0%;
+    color: #F1FAEE;
+    padding-left: 1%;
+    padding-top: 6%;
+}
+.f-para{
+    position: absolute;
+    bottom: 0%;
+    font-size: 17px;
+    text-align: justify;
+    padding-bottom: 3%;
+}
+.para-res h4{
+    font-size: 19px;
+    font-weight: 700 !important;
+}
+.para-res h3{
+    font-weight: 900 !important;
+}
+.img-res:hover{
+    width: 100% !important;
+    left: 0%;
+    border-radius: 36px;
+    border: 1px double #1D3557;
+}
+.desk-cont{
+    margin: auto;
+    width: 90%;
+    text-align: center;
+}
+.founder-name{
+    font-size: 27px;
+    font-weight: bolder;
+    text-align: left !important;
+}
+.founder-pic{
+    margin: 0 10%;
+    border-radius: 50%;
+    box-shadow: 
+      12px 12px 16px 0 rgba(255, 255, 255, 0.3) inset,
+      -8px -8px 12px 0 rgba(0, 0, 0, .25) inset !important;
+    overflow: hidden;  
+    width: 80% !important;
+}
+.founder-img{
+    border-radius: 50% !important;
+    position: relative;
+    text-align: center;
+}
+.img-responsive{
+    width: 100% !important;
+    height: auto;
+}
+.ta-l{
+    text-align: left !important;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(63, 61, 61);
+  }
+  .para-f{
+    font-size: 18px;
+    color:grey;
+    font-weight: bold;
+    text-align: justify;
+  }
+.icon-founder{
+    margin: 0%;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+.founder-a{
+    font-size: 3rem !important;
+    width: 100%;
+    padding: 2px;
+    color: #1D3557;
+    margin: 10% 0;
+    justify-content: center;
+    text-align: center;
+  }
+  .founder-a:hover{
+    font-size: 3.2rem;
+    color: #F1FAEE;
+  }
+  @media screen and (max-width: 800px){
+    .founder-a{
+        width: 10%;
+        margin: 10px !important;
+    }
+    .icon-founder{
+        margin-bottom: 5%;
+        position: relative;
+    }
+}
+/* test card css */
+.car-test{
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .card-test{
+    width: 100%;
+    padding: 0 20%;
+    border: none;
+    background-image: linear-gradient(180deg, #457b9dad, #A8DADC);
+    box-shadow: 
+      12px 12px 16px 0 rgba(255, 255, 255, 0.3) inset,
+      -8px -8px 12px 0 rgba(0, 0, 0, .25) inset;
+  }
+  .testi-cards{
+      margin-bottom: 5%;
+  }
+  .blue-head{
+      color: #1D3557 !important;
+  }
+  .card-test img{
+    width: 150px;
+    border-radius: 50%;
+    margin: 4% auto 0 auto;
+    border: 3px solid white;
+  
+  }
+  .test-from{
+    font-size: 20px !important;
+    color: rgb(68, 65, 65);
+    text-align: center;
+    
+  }
+  .card-body{
+      text-align: center;
+      color: #1D3557;
+  }
+  @media screen and (max-width: 800px){
+      .car-test{
+          width: 90%;
+      }
+      .card-test{
+          padding:0 4%;
+      }
+  }
